# paytm-tracker

./: .gitignore  Dockerfile  README.md  requirements.txt  start.sh  vercel.json
api/: index.py
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/endpoints/: auth.py  expenses.py
backend/app/core/: auth.py  config.py
backend/app/db/: session.py
backend/app/models/: expense.py
backend/tests/: test_auth_flow.py  test_expenses.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
