[project]
name = "money-tracker-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "SATYAsasini",email = "satya.prakash@devtron.ai"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.136.0,<0.137.0)",
    "uvicorn (>=0.45.0,<0.46.0)",
    "sqlmodel (>=0.0.38,<0.0.39)",
    "pytest (>=9.0.3,<10.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
